--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:development": "ng build --configuration=development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ng-env": "node dist/ng-env/server/server.mjs"
+    "serve:ssr:ng-env": "node dist/ng-env/server/server.mjs",
+    "serve:ssr:DisneyApp": "node dist/disney-app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -21,9 +22,12 @@
     "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
+    "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@angular/ssr": "^17.3.3",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "express": "^4.18.2",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,7 +37,9 @@
     "@angular-devkit/build-angular": "^17.2.1",
     "@angular/cli": "^17.2.1",
     "@angular/compiler-cli": "^17.2.0",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
